; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-ext/handler/extr_handler-gc.c_jerryx_handler_gc.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-ext/handler/extr_handler-gc.c_jerryx_handler_gc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JERRY_GC_PRESSURE_HIGH = common dso_local global i32 0, align 4
@JERRY_GC_PRESSURE_LOW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @jerryx_handler_gc(i32 %0, i32 %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i64, i64* %8, align 8
  %13 = icmp sgt i64 %12, 0
  br i1 %13, label %14, label %22

14:                                               ; preds = %4
  %15 = load i32*, i32** %7, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @jerry_value_to_boolean(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %14
  %21 = load i32, i32* @JERRY_GC_PRESSURE_HIGH, align 4
  br label %24

22:                                               ; preds = %14, %4
  %23 = load i32, i32* @JERRY_GC_PRESSURE_LOW, align 4
  br label %24

24:                                               ; preds = %22, %20
  %25 = phi i32 [ %21, %20 ], [ %23, %22 ]
  store i32 %25, i32* %9, align 4
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @jerry_gc(i32 %26)
  %28 = call i32 (...) @jerry_create_undefined()
  ret i32 %28
}

declare dso_local i64 @jerry_value_to_boolean(i32) #1

declare dso_local i32 @jerry_gc(i32) #1

declare dso_local i32 @jerry_create_undefined(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
